--- a/public/2048.css
+++ b/public/2048.css
@@ -1,13 +1,13 @@
 header {
     display: block;
     margin: 0 auto;
-    width: 500px;
+    width: 100%;
     text-align: center;
 }
 
 header h1 {
     font-family: Arial;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: bold;
     padding: 0;
     margin: 4px;
@@ -45,6 +45,7 @@ header p {
     border-radius: 10px;
     margin: 0 auto;
     position: relative;
+    display: none;
 }
 
 #grid-container:after {
@@ -67,7 +68,7 @@ header p {
     border-radius: 6px;
     font-family: Arial;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 0.9rem;
     line-height: 100px;
     text-align: center;
     position: absolute;
